--- a/packages/website/docs/templates.mdx
+++ b/packages/website/docs/templates.mdx
@@ -626,15 +626,15 @@ new Crawler({
         return helpers.docsearch({
           recordProps: {
             lvl0: {
-              selectors: '.sidebar-heading.active',
+              selectors: '.vp-sidebar-item.route-link-active',
               defaultValue: 'Documentation',
             },
-            lvl1: '.theme-default-content h1',
-            lvl2: '.theme-default-content h2',
-            lvl3: '.theme-default-content h3',
-            lvl4: '.theme-default-content h4',
-            lvl5: '.theme-default-content h5',
-            content: '.theme-default-content p, .theme-default-content li',
+            lvl1: '[vp-content] h1',
+            lvl2: '[vp-content] h2',
+            lvl3: '[vp-content]t h3',
+            lvl4: '[vp-content]t h4',
+            lvl5: '[vp-content] h5',
+            content: '[vp-content] p, [vp-content] li',
           },
           indexHeadings: true,
           aggregateContent: true,
